refactor CloneRepoImpl.insert